# code-ai-ollama

./: Cargo.toml  README.md
src/: error.rs  lib.rs  main.rs
src/services/: ollama.rs  websocket.rs
src/splitter/: char_splitter.rs  mod.rs  word_splitter.rs
src/unit/chat/: main.rs
src/unit/ollama/: main.rs
